# phage-host-paper1

./: LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: common.py  e1_reproduce_phlearn.py  e2_esm_embed_classify.py  e3_homology_baseline.py  e4_dataset_eda.py  e5_cluster_split.py  e6_simple_features.py  e_alpha2_label_shuffle_esm650.py  e_alpha_label_shuffle.py  f0_phage_level_split.py  f10_aggregate.py  f1_sliding_window.py  f1b_classifier_esm650.py  f1b_esm650_sliding_gpu.py  f4_ktype_stratified.py  f4b_ktype_kaptive_ref.py  f9_shap_e6.py  f_benchmark_main.py  f_plus_dna_kmer_markov.py  f_plus_survey.py  regen_paper_figures_hires.py  reproduce_all.py
src/: config.py
src/baselines/: dna_kmer_markov.py  homology.py  kmer_markov.py
src/baselines/adapters/: __init__.py  external_methods.py
src/data/: download.py  phage_split.py  phlearn.py  split.py
src/eval/: __init__.py  aggregate.py  ktype.py  shap_analysis.py
src/features/: esm_embedding.py  simple_features.py  sliding_window.py
src/models/: classifiers.py
src/stats/: __init__.py  metrics.py
src/utils/: hashing.py  seed.py
tests/: test_classifiers.py  test_delong_vs_pROC.py  test_dna_kmer_markov.py  test_kmer_markov.py  test_ktype.py  test_paper1_headline_stats.py  test_phage_split.py  test_phlearn.py  test_seed.py  test_simple_features.py  test_sliding_window.py  test_split.py  test_stats_metrics.py
tests/fixtures/: delong_proc_ref.json
